refactor platform: extract the OS certificate service into a content module
Keep the native certificate dependency outside ide.impl.
Move the service without changing its behavior or registration API.
Declare the trusted-roots dependency on JNA and include the module in tests.

Keep both certificate modules embedded. The language server reads trusted
roots before application services are available.

Apply the Java style rules in the moved service.
Keep certificate loading and the returned collection contract unchanged.

Build 1054902066 failed because the shared-index process omitted this module.
Include the module in the runtime classpath for plugin index generation.
This keeps the certificate service available when the generator starts the IDE directly.

GitOrigin-RevId: 8697e43f7d28a697fbf37ffea9e1c17949e65cb1